<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.bakaar</groupId>
    <artifactId>jdk-newfeatures</artifactId>
    <version>1.0-SNAPSHOT</version>

<build>
    <plugins>
        <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
                <release>15</release>
                <compilerArgs>
                    <arg>--enable-preview</arg>
                </compilerArgs>
                <forceJavacCompilerUse>true</forceJavacCompilerUse>
                <parameters>true</parameters>
            </configuration>
        </plugin>
    </plugins>
</build>
</project>